Derniere corrections LATEX

--- a/main.tex
+++ b/main.tex
@@ -63,7 +63,8 @@ Le courbes montrent que la meilleure résonance est atteinte pour $R=n \mu m$
 
 \subsection{Variation d'épaisseur}
 
-Les épaisseurs d'or et de titane varient de sorte que la somme de leurs épaisseurs fassent toujours $100 \mu m$.
+Les épaisseurs d'or et de titane varient de sorte que la somme de leurs épaisseurs fassent toujours $100 \mu m$. La fréquence de sollicitation est fixée entre $5.0$ et $5.2 MHz$. %(à revérifier)
+Le courbes montrent que la meilleure résonance est atteinte pour $e_{or}=n \mu m$
 
 
 
